# kidentitymanagement

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .krazy  .pre-commit-config.yaml  .reviewboardrc  CMakeLists.txt  KF5IdentityManagementConfig.cmake.in  KF5PimIdentitiesConfig.cmake.in  KPimIdentityManagementConfig.cmake.in  PORT  dpointerforkde5  identity.cpp  identity.h  identitycombo.cpp  identitycombo.h  identitymanager.cpp  identitymanager.h  kidentitymanagement.categories  kidentitymanagement.renamecategories  kpimidentities_export.h  krichtext.diff  metainfo.yaml  signature.cpp  signature.h  signatureconfigurator.cpp  signatureconfigurator.h
autotests/: CMakeLists.txt  identitymodeltest.cpp  identitymodeltest.h  identitytest.cpp  identitytest.h  signaturetest.cpp  signaturetest.h
kioslave/sieve/: draft-martin-managesieve-03.txt  sieve.cpp
kmime/: boolflags.cpp  boolflags.h  kmime_charfreq.cpp  kmime_charfreq.h  kmime_codec_base64.cpp  kmime_codec_base64.h  kmime_codec_qp.cpp  kmime_codec_qp.h  kmime_codecs.cpp  kmime_codecs.h  kmime_content.cpp  kmime_content.h  kmime_header_parsing.cpp  kmime_header_parsing.h  kmime_headers.cpp  kmime_headers.h  kmime_message.cpp  kmime_message.h  kmime_newsarticle.cpp  kmime_newsarticle.h  kmime_parsers.cpp  kmime_parsers.h  kmime_util.cpp  kmime_util.h
ktnef/ktnef/: ktnefdefs.h
po/ar/: libkpimidentities5.po  libkpimidentities6.po
po/ast/: libkpimidentities5.po  libkpimidentities6.po
po/az/: libkpimidentities5.po  libkpimidentities6.po
po/be/: libkpimidentities5.po  libkpimidentities6.po
po/bs/: libkpimidentities5.po  libkpimidentities6.po
po/ca/: libkpimidentities5.po  libkpimidentities6.po
po/ca@valencia/: libkpimidentities5.po  libkpimidentities6.po
po/cs/: libkpimidentities5.po  libkpimidentities6.po
po/da/: libkpimidentities5.po  libkpimidentities6.po
po/de/: libkpimidentities5.po  libkpimidentities6.po
po/el/: libkpimidentities5.po  libkpimidentities6.po
po/en_GB/: libkpimidentities5.po  libkpimidentities6.po
po/eo/: libkpimidentities5.po  libkpimidentities6.po
po/es/: libkpimidentities5.po  libkpimidentities6.po
po/et/: libkpimidentities5.po  libkpimidentities6.po
po/eu/: libkpimidentities5.po  libkpimidentities6.po
po/fi/: libkpimidentities5.po  libkpimidentities6.po
po/fr/: libkpimidentities5.po  libkpimidentities6.po
po/ga/: libkpimidentities5.po  libkpimidentities6.po
po/gl/: libkpimidentities5.po  libkpimidentities6.po
po/he/: libkpimidentities6.po
po/hi/: libkpimidentities5.po  libkpimidentities6.po
po/hne/: libkpimidentities5.po  libkpimidentities6.po
po/hu/: libkpimidentities5.po  libkpimidentities6.po
po/ia/: libkpimidentities5.po  libkpimidentities6.po
po/it/: libkpimidentities5.po  libkpimidentities6.po
po/ja/: libkpimidentities5.po  libkpimidentities6.po
po/ka/: libkpimidentities5.po  libkpimidentities6.po
po/kk/: libkpimidentities5.po  libkpimidentities6.po
po/km/: libkpimidentities5.po  libkpimidentities6.po
po/ko/: libkpimidentities5.po  libkpimidentities6.po
richtextbuilders/: CMakeLists.txt  Mainpage.dox  kmarkupdirector.cpp  kmarkupdirector_p.cpp  krichtexteditor.cpp  ktexthtmlbuilder.cpp  ktexthtmlbuilder.h  main.cpp
richtextbuilders/testapp/: CMakeLists.txt  krichtexteditor.h  krichtexteditorui.rc
src/: CMakeLists.txt  Messages.sh  dpointersignature  identity.cpp  identity.h  identitycombo.cpp  identitycombo.h  identitymanager.cpp  identitymanager.h  kidentitymanagement_debug.cpp  kidentitymanagement_debug.h  org.kde.pim.IdentityManager.xml  signature.cpp  signature.h  signatureconfigurator.cpp  signatureconfigurator.h  utils.cpp  utils.h
src/core/: CMakeLists.txt  KPimIdentityManagementConfig.cmake.in  KPimIdentityManagementCoreConfig.cmake.in  identity.cpp  identity.h  identityactivitiesabstract.cpp  identityactivitiesabstract.h  identitymanager.cpp  identitymanager.h  identitymodel.cpp  identitymodel.h  identitytreemodel.cpp  identitytreemodel.h  identitytreesortproxymodel.cpp  identitytreesortproxymodel.h  kidentitymanagement-core.qdoc  kidentitymanagement-core.qdocconf  kidentitymanagement-index.qdoc  org.kde.pim.IdentityManager.xml  signature.cpp  signature.h  utils.cpp  utils.h
src/core/autotests/: CMakeLists.txt  identitymodeltest.cpp  identitytest.cpp  signaturetest.cpp  signaturetest.h
src/quick/: CMakeLists.txt  KPimIdentityManagementQuickConfig.cmake.in  abstractcryptographybackend.cpp  abstractcryptographybackend.h  abstractkeylistmodel.cpp  abstractkeylistmodel.h  cryptographybackendinterface.h  cryptographyeditorbackend.cpp  cryptographyeditorbackend.h  identityeditorbackend.cpp  identityeditorbackend.h  identitymodel.cpp  identitymodel.h  identityutils.cpp  identityutils.h  keylistmodel.h  keylistmodelinterface.h  kidentitymanagement-quick.qdoc  kidentitymanagement-quick.qdocconf  kidentitymanagementquickplugin.cpp  kidentitymanagementquickplugin.h  signatureeditorbackend.cpp  signatureeditorbackend.h
src/quick/qml/: BasicIdentityEditorCard.qml  CryptographyEditorCard.qml  IdentityConfigurationForm.qml  IdentityEditorPage.qml  SignatureEditorCard.qml
src/widgets/: CMakeLists.txt  KPimIdentityManagementWidgetsConfig.cmake.in  identityactivitiesabstract.cpp  identityactivitiesabstract.h  identitycombo.cpp  identitycombo.h  identitytablemodel.cpp  identitytablemodel.h  identitytreedelegate.cpp  identitytreedelegate.h  identitytreemodel.cpp  identitytreemodel.h  identitytreesortproxymodel.cpp  identitytreesortproxymodel.h  identitytreeview.cpp  identitytreeview.h  identitywidget.cpp  identitywidget.h  kidentitymanagement-widgets.qdoc  kidentitymanagement-widgets.qdocconf  signatureconfigurator.cpp  signatureconfigurator.h  signaturerichtexteditor.cpp  signaturerichtexteditor_p.h
src/widgets/autotests/: CMakeLists.txt  identitytreeviewtest.cpp  identitytreeviewtest.h
src/widgets/tests/: CMakeLists.txt  identitycombo_gui.cpp  identitytreeview_gui.cpp  identitywidget_gui.cpp
src/widgets/ui/: identitywidget.ui
tests/: CMakeLists.txt  identitytest.cpp  identitytest.h  signaturetest.cpp  signaturetest.h
(+61 files in other folders)
